# lab-getting-started

./: README.md  hatch.cabal  stack.yaml
src/: Animation.hs  Lab.hs
src/hatch/: Images.hs  Layout.hs  Main.hs  Transforms.hs  Workshop.hs
